app/stylesheets/_core.sass
@import 960/grid
@import compass/layout/sticky-footer
@import compass/utilities/general/clearfix
@import compass/utilities/lists/inline-list        
@import compass/css3/border-radius
@import compass/css3/gradient
@import compass/css3/inline-block
@import compass/css3/box-shadow
@import compass/css3/text-shadow
@import compass/reset/utilities

@import mixins
@import colors
@import measurements

@import tipsy

+global-reset
 
$ninesixty-columns: 24
$ninesixty-gutter-width: 10px

body
  border-top: 7px solid $topColor
  min-width: 960px
  color: $primaryTextColor
  text-rendering: optimizeLegibility
  background-color: $backgroundColor
  +serif

nav, header, footer
  display: block
  
a
  color: $linkColor
  text-decoration: none
  &:hover
    text-decoration: underline
  &:visited
  &:active 

#wrap
  position: relative
  margin:
    top: -7px
    left: auto
    right: auto
  overflow: hidden
  width: 972px
  padding: 0 5px
  +clearfix


#main
  +clearfix
  margin-bottom: -1000px
  padding-bottom: 1000px

h2.title
  float: left
  padding: 10px 15px 8px
  height: 20px
  width: 697px
  background-color: #4a7eb0
  color: $offWhite
  font-size: 15px
  +border-top-left-radius(7px)

#search
  width: 215px
  height: 30px
  float: right
  padding: 8px 15px 0
  background-color: #396081
  color: $offWhite
  font-size: 15px
  text-align: center
  +border-top-right-radius(7px)
  form
    input[type=text]
      font-size: 0.7em
      @include styledInput




#win, #fail
  width: inherit
  color: white
  padding: 7px 10px
  +sans
  font-size: 12px
  font-weight: bold
  margin-bottom: 10px
  +border-radius($defaultRadius)

#win
  background-color: green
#fail
  background-color: red

.label 
  color: #666666
  -webkit-transition: color 0.2s linear

.fading 
  color: white
  -webkit-transition: color 0.2s linear

+sticky-footer(30px, "#wrap", "#wrap_footer", "footer")

footer
  padding: 10px
  height: 11px
  background: $topColor
  width: auto
  @include sans
  font-size: 11px
  color: $topTextColor
  a
    color: $topLinkColor
  span#footer_copy
  nav
    color: black
    +inline-block
    position: absolute
    right: 10px

